# tuhi

./: .gitignore  DBusInterface.md  README.md  example.ini  meson.build  meson_install.sh  org.freedesktop.Tuhi.json  org.freedesktop.TuhiGui.json  org.freedesktop.tuhi.json  setup.py  tuhi-gui.in  tuhi-kete.py  tuhi.in  tuhi.py  tuhigui.in
.circleci/: config.yml
.github/workflows/: main.yml
data/: meson.build  org.freedesktop.Tuhi.appdata.xml.in.in  org.freedesktop.TuhiGui.appdata.xml.in.in  org.freedesktop.TuhiGui.desktop.in  tuhi.gresource.xml
data/ui/: AboutDialog.ui.in  AppMenu.ui  Drawing.ui  DrawingPerspective.ui  ErrorPerspective.ui  MainWindow.ui  SetupPerspective.ui  Splitter.ui
po/: LINGUAS  POTFILES  README.md  it.po  meson.build  pl.po  tr.po
test/: test_messages.py  test_strokes.py
tools/: exporter.py  kete.py  parse_log.py  raw-log-converter.py  test-svg.py  tuhi-gui-flatpak.py  tuhi-kete-sandboxed.py  tuhi-kete.py  tuhi-live.py  tuhi_kete.py
tuhi/: base.py  ble.py  config.py  dbusclient.py  dbusserver.py  drawing.py  export.py  protocol.py  svg.py  uhid.py  util.py  wacom.py
tuhi/gui/: README.md  __init__.py  application.py  config.py  drawing.py  drawingperspective.py  splitter.py  svg.py  tuhi.py  window.py
tuhigui/: .gitignore  application.py  config.py  drawing.py  drawingperspective.py  errorperspective.py  setupdialog.py  setupperspective.py  svg.py  tuhi.py  window.py
tuhigui/data/: meson.build  org.freedesktop.Tuhi.appdata.xml.in.in  org.freedesktop.Tuhi.desktop.in  org.freedesktop.TuhiGui.appdata.xml.in.in  tuhi.gresource.xml  tuhigui.gresource.xml
tuhigui/data/ui/: AboutDialog.ui.in  Drawing.ui  DrawingPerspective.ui  Flowbox.ui  MainWindow.ui
tuhigui/tuhigui/: window.py
